# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  go  main.c
includes/: ft_printf.h
libft/: Makefile  ft_abs.c  ft_atoi.c  ft_atol.c  ft_atoul.c  ft_bzero.c  ft_check_end_spaces.c  ft_convert_dec_base.c  ft_convert_undec_base.c  ft_ftoa.c  ft_isalnum.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_num_of_digits.c  ft_num_of_fields.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putunbr.c  ft_str_is_lowercase.c  ft_str_is_numeric.c  ft_str_is_printable.c  ft_str_is_uppercase.c  (+29 more)
libft/includes/: libft.h  sort_algs.h
libft/src/ft_array/: ft_get_number_of_substrings.c  ft_print_int_arr.c  ft_print_pstr_arr.c  ft_print_sizet_arr.c  ft_print_str_arr.c
libft/src/ft_lst/: ft_lstiter.c
libft/src/ft_num/: ft_copy_int_arr.c
libft/src/ft_sorting/: ft_merge_sort.c  ft_merge_sort_sizet.c
libft/src/ft_str/: ft_str_is_numeric_no_spaces.c  ft_strsplit.c
src/: alignment.c  calc_float_width.c  calc_signed_width.c  calc_unsigned_precision.c  check_conventions.c  flag_cs.c  flag_di.c  flag_f.c  flag_f_handle.c  flag_o.c  flag_p.c  flag_percent.c  flag_x.c  get_flags.c  handle_float_zeros.c  parse_flags.c  pf_putnbr_base.c  pf_putunbr.c  pf_strcat.c  pf_strchr.c  pf_strchr_flags.c  print_d.c  print_f.c  print_o.c  print_p.c  print_percent.c  print_u.c  print_x.c  removes_flags.c  utils.c
srcs/: alignment.c  calc_float_width.c  calc_signed_precision.c  calc_signed_width.c  calc_str_width_precision.c  calc_unsigned_precision.c  calc_unsigned_width.c  check_conventions.c  flag_cs.c  flag_di.c  flag_f.c  flag_f_handle.c  flag_o.c  flag_p.c  flag_percent.c  flag_precision.c  flag_u.c  flag_upx.c  flag_x.c  ft_find_and_remove_char.c  ft_ftoa.c  ft_printf.c  ft_putnbr_base.c  ftpf_strchr.c  get_flags.c  handle_float_conditions.c  handle_float_zeros.c  main.c  parse_flags.c  pf_putstr.c  pf_strcat.c  pf_strchr.c  pf_strchr_flags.c  pfft_putnbr.c  precision.c  print_d.c  print_f.c  print_o.c  print_p.c  print_percent.c  (+4 more)
