cmake_minimum_required(VERSION 3.14)
project(new_printf C)

set(CMAKE_C_STANDARD 99)

add_executable(new_printf
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_atol.c
        libft/ft_bzero.c
        libft/ft_check_end_spaces.c
        libft/ft_check_start_spaces.c
        libft/ft_convert_dec_base.c
        libft/ft_convert_undec_base.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_num_of_digits.c
        libft/ft_num_of_fields.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_str_is_lowercase.c
        libft/ft_str_is_numeric.c
        libft/ft_str_is_printable.c
        libft/ft_str_is_uppercase.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnlen.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_atoul.c
        libft/ft_unnum_of_fields.c
        libft/ft_putunbr.c
        libft/ft_ftoa.c
        srcs/alignment.c
        srcs/flag_cs.c
        srcs/flag_di.c
        srcs/flag_o.c
        srcs/precision.c
        srcs/flag_u.c
        srcs/flag_x.c
        srcs/ft_printf.c
        srcs/pf_strchr.c
        srcs/get_flags.c
        srcs/print_d.c
        srcs/utils.c
        srcs/calc_unsigned_precision.c
        srcs/calc_signed_precision.c
        srcs/calc_signed_width.c
        srcs/calc_unsigned_width.c
        srcs/check_conventions.c
        srcs/ft_putnbr_base.c
        srcs/print_o.c
        srcs/print_u.c
        srcs/print_x.c
        srcs/print_p.c
        srcs/flag_p.c
        srcs/flag_percent.c
        srcs/print_percent.c
        srcs/flag_f.c
        srcs/print_f.c
        main.c
        srcs/calc_float_width.c srcs/flag_f_handle.c srcs/ft_find_and_remove_char.c srcs/pf_strchr_flags.c srcs/pf_strcat.c srcs/removes_flags.c srcs/handle_float_zeros.c
        srcs/pf_putnbr_base.c
        srcs/pf_putstr.c
        srcs/pf_putunbr.c
        srcs/parse_flags.c
        srcs/handle_float_conditions.c)
